auth controller update
