# Controller/authController.js
@@ -36,7 +36,7 @@ const store = async (req, res) => {
             if (!company) throw new Error('Does not have any company or admin with this credentials');
             data.token = jsonwebtoken.sign({ data: company }, process.env.API_SECRET);
             data.role = company.role;
-        } else if (req.body.phone) {
+        } else if (req.body.phone & !req.body.otp) {
             query.phone = req.body.phone;
             const sendOTP = await vonage.verify.start({ number: `+88${req.body.phone}`, brand: "Vonage" })
             await Worker.findOneAndUpdate(query, { otpRequestId: sendOTP.request_id }, { new: true });
@@ -49,12 +49,12 @@ const store = async (req, res) => {
                 data.message = 'Please verify by otp'
             } else data.message = 'Otp sending failed'
 
-        } else if (req.body.otpRequestId && req.body.otp) {
+        } else if (req.body.phone && req.body.otp) {
             delete query.password;
-            query.otpRequestId = req.body.otpRequestId;
+            query.phone = req.body.phone;
             const worker = await Worker.findOne(query);
             if (!worker) throw new Error('Does not have any worker with this credentials');
-            const verify = await vonage.verify.check(req.body.otpRequestId, req.body.otp)
+            const verify = await vonage.verify.check(worker.otpRequestId, req.body.otp)
             if (verify.status === '0') {
                 data.token = jsonwebtoken.sign({ data: worker }, process.env.API_SECRET);
                 data.role = worker.role;
